fixed strange white space at bottom

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -89,7 +89,7 @@
   justify-content: space-between;
   background-color: var(--dark);
   width: 100%;
-  height: calc(100vh - 64px);
+  height: calc(100vh - 2rem);
   overflow: hidden;
   padding: 2rem;
   gap: 2rem;
